Izbačene nepotrebne stvari. Dodan carrier modul za tcp komunikaciju.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "express": "3.4.4",
     "jade": "*",
     "sqlite3": "*",
-    "socket.io": "*",
-    "carrier" : "*",
-    "serialport" : "*"
+    "socket.io": "*"
   }
 }
